# xbmc

./: .gitignore  CMakeLists.txt  Makefile.in  Makefile.include.in  configure.ac  configure.in  privacy-policy.txt
.github/workflows/: change-checker.yml
Kodi.xcodeproj/: project.pbxproj
addons/kodi.binary.devkit/: addon.xml.in
addons/library.kodi.audioengine/: libKODI_audioengine.h
addons/library.kodi.guilib/: libKODI_guilib.h
addons/library.xbmc.gui/: libXBMC_gui.h
addons/xbmc.adsp/: addon.xml
adsp-addons/: .gitignore  Makefile.am  README  configure.ac
adsp-addons/addons/: Makefile.am  Makefile.include.am
adsp-addons/addons/adsp.basic/: Makefile.am
adsp-addons/addons/adsp.basic/addon/: addon.xml.in
adsp-addons/addons/adsp.basic/project/VS2010Express/: adspclient_basic.vcxproj  adspclient_basic.vcxproj.filters
adsp-addons/addons/adsp.basic/src/: AudioDSPBasic.cpp  AudioDSPBasic.h  AudioDSPSettings.cpp  AudioDSPSoundTest.h  DSPProcessMaster.cpp  DSPProcessMaster.h  GUIDialogSpeakerDistance.cpp  GUIDialogSpeakerDistance.h  GUIDialogSpeakerGain.cpp  client.cpp
adsp-addons/addons/adsp.basic/src/Process_Stereo/: DSPProcessStereo.cpp
adsp-addons/addons/adsp.basic/src/filter/: complex.cpp  complex.h  filter.cpp  filter.h  high_shelf.cpp  high_shelf.h  mkfilter.cpp
adsp-addons/addons/adsp.freesurround/: Makefile.am
adsp-addons/addons/adsp.freesurround/addon/: addon.xml.in
adsp-addons/addons/adsp.freesurround/src/: ChannelMaps.cpp  ChannelMaps.h  DSPProcessFreeSurround.cpp  DSPProcessFreeSurround.h  FreeSurroundDecoder.h  FreeSurroundSettings.cpp  FreeSurroundSettings.h  GUIDialogFreeSurround.cpp  GUIDialogFreeSurround.h  client.cpp  client.h
adsp-addons/addons/adsp.template/: Makefile.am
adsp-addons/addons/adsp.template/addon/: addon.xml.in
adsp-addons/addons/adsp.template/project/VS2010Express/: adsptemplate.vcxproj  adsptemplate.vcxproj.filters
adsp-addons/addons/adsp.template/src/template/: client.cpp
adsp-addons/addons/adsp.template/src/template/include/: ADSPAddonHandler.h  ADSPProcessorHandle.h  IADSPProcessor.h
adsp-addons/xbmc/: NOTE  xbmc_adsp_types.h
docs/: CONTRIBUTING.md
language/English/: strings.po
lib/libRTV/: interface.c
project/VS2010Express/: XBMC for Windows.sln  XBMC.vcxproj  XBMC.vcxproj.filters
system/: addon-manifest.xml
system/keymaps/: keyboard.xml
system/settings/: settings.xml
xbmc/: Application.cpp  Application.h  ApplicationMessenger.cpp  ApplicationMessenger.h  ApplicationPlayer.cpp  ApplicationPlayer.h  ContextMenuManager.cpp  DatabaseManager.cpp  FileItem.cpp  FileItem.h  GUIInfoManager.cpp  GUIInfoManager.h  GUIUserMessages.h  LangInfo.cpp  ServiceBroker.cpp  ServiceBroker.h  ServiceManager.cpp  ServiceManager.h  URL.cpp  Util.cpp  system.h
xbmc/addons/: Addon.cpp  Addon.h  AddonBuilder.cpp  AddonCallbacks.h  AddonCallbacksAudioDSP.cpp  AddonCallbacksGUI.cpp  AddonCallbacksGUI.h  AddonDatabase.cpp  AddonDll.cpp  AddonDll.h  AddonEvents.h  AddonInfo.h  AddonInstaller.cpp  AddonManager.cpp  AddonManager.h  AddonProvider.h  AddonStatusHandler.cpp  AddonStatusHandler.h  AudioDecoder.cpp  AudioDecoder.h  AudioEncoder.cpp  AudioEncoder.h  BinaryAddonCache.cpp  GUIDialogAddonInfo.cpp  IAddon.h  ImageDecoder.cpp  ImageDecoder.h  Makefile  PVRClient.cpp  PVRClient.h  Repository.cpp  RepositoryUpdater.cpp  Scraper.cpp  ScreenSaver.cpp  ScreenSaver.h  Service.cpp  Service.h  Skin.cpp  VFSEntry.cpp  VFSEntry.h  (+3 more)
xbmc/addons-new/: AddonChangeObserver.cpp  AddonChangeObserver.h  AddonChangeProcessor.cpp  AddonChangeProcessor.h  AddonDatabase.cpp  AddonDatabase.h  AddonInfo.cpp  AddonInfo.h  AddonManager.cpp  AddonManager.h  AddonVersion.cpp  AddonVersion.h  CMakeLists.txt
xbmc/addons/kodi-addon-dev-kit/lib/kodi/kodi-addon-executable/: AddonToKodi.cpp  AddonToKodi.cpp.base  AddonToKodi.h  AddonToKodi.h.base  CMakeLists.txt  ErrorCodeNames.cpp  ErrorCodeNames.h  InterProcess.cpp  InterProcess.h  RequestPacket.cpp  RequestPacket.h  ResponsePacket.cpp  ResponsePacket.h  SharedMemory.cpp  SharedMemory.h  SharedMemoryPosix.cpp  SharedMemoryPosix.h  SharedMemoryWindows.cpp  SharedMemoryWindows.h  main.cpp  make_wrapper_types.py
xbmc/cdrip/: Encoder.cpp  EncoderFFmpeg.cpp  EncoderFFmpeg.h  IEncoder.h
xbmc/cores/: IPlayer.h
xbmc/dialogs/: GUIDialogContextMenu.h
xbmc/filesystem/: AddonsDirectory.cpp  CMakeLists.txt  CurlFile.cpp  DirectoryFactory.cpp  File.cpp  NFSDirectory.cpp  WebDirectory.cpp  WebDirectory.h
xbmc/guiinfo/: GUIInfoLabels.h
xbmc/guilib/: CMakeLists.txt  GUIControl.h  GUIControlFactory.cpp  GUIControlProfiler.cpp  GUICutterProgressControl.cpp  GUICutterProgressControl.h  GUIDialog.cpp  GUIFontTTF.cpp  GUIListGroup.cpp  GUISettingsLabelControl.cpp  GUISettingsLabelControl.h  GUITextLayout.cpp  GUIVisualisationControl.cpp  GUIWebAddonControl.cpp  GUIWebAddonControl.h  GUIWindowManager.cpp  Makefile.in  WindowIDs.h  imagefactory.cpp
xbmc/input/: ButtonTranslator.cpp  WindowTranslator.cpp
xbmc/interfaces/: Builtins.cpp
xbmc/listproviders/: DirectoryProvider.cpp  DirectoryProvider.h
xbmc/pvr/: PVRGUIInfo.h  PVRJobs.h  PVRManager.h
xbmc/settings/: AdvancedSettings.cpp  AdvancedSettings.h  MediaSettings.cpp  SettingControl.cpp  SettingControl.h  Settings.cpp
xbmc/storage/: MediaManager.cpp
xbmc/utils/: SaveFileStateJob.cpp  URIUtils.cpp  URIUtils.h
xbmc/video/: FFmpegVideoDecoder.cpp
xbmc/web/: CMakeLists.txt  Favourites.cpp  Favourites.h  WebAddon.cpp  WebAddon.h  WebAddonControl.cpp  WebAddonControl.h  WebAddonTranslator.cpp  WebAddonTranslator.h  WebDatabase.cpp  WebDatabase.h  (+3 more)
(+940 files in other folders)
